# CirquePinnacle

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  CirquePinnacle.cpp  CirquePinnacle.h  Cirque_1CA027.h  LICENSE  MANIFEST.in  README.rst  cspell.config.yml  easy_linux_install.sh  install-linux.sh  keywords.txt  library.json  library.properties  pyproject.toml  readme.rst  setup.py
.github/workflows/: build_arduino.yml  build_docs.yml  build_linux.yml  build_pico_sdk.yml  build_platformio.yml  build_python.yml  cpp_lint.yaml  doxygen.yml
docs/: Doxyfile  api.bak  api.md  api.rst  arduino.rst  conf.py  doxygen_darkness.css  examples.rst  index.rst  linux.rst  pico_sdk.rst  python.rst  requirements.txt
docs/API/: arduino_wrappers.rst  cpp.rst  python.rst
docs/_static/: dark_material.css  darkness.css  extra_css.css
docs/datasheets/: README.md
examples/: README.md  absolute_mode.ino  anymeas_mode.ino  relative_mode.ino  usb_mouse.ino
examples/absolute_mode/: absolute_mode.ino
examples/anymeas_mode/: anymeas_mode.ino
examples/cpython/: absolute_mode.py  anymeas_mode.py  relative_mode.py
examples/linux/: CMakeLists.txt  absolute_mode.cpp  anymeas_mode.cpp  relative_mode.cpp
examples/pico_sdk/: CMakeLists.txt  absolute_mode.cpp  anymeas_mode.cpp  defaultPins.h  relative_mode.cpp
examples/pico_sdk/usb_mouse/: CMakeLists.txt  README.md  main.cpp  tusb_config.h  usb_descriptors.c  usb_descriptors.h
examples/relative_mode/: relative_mode.ino
examples/usb_mouse/: usb_mouse.bak  usb_mouse.ino
src/: CMakeLists.txt  CirquePinnacle.cpp  CirquePinnacle.h  CirquePinnacle_arch_common.h  CirquePinnacle_common.h  py_bindings.cpp
src/cirque_pinnacle-stubs/: __init__.pyi
src/cmake/: CPackInfo.cmake  GetLibInfo.cmake  auto_config_driver.cmake
src/cmake/toolchains/: arm64.cmake  armhf.cmake  default.cmake  i686.cmake  x86_64.cmake
src/utility/: CMakeLists.txt  includes.h.in
src/utility/bcm2xxx/: bcm2835.c  bcm2835.h  gpio.h  i2c.cpp  i2c.h  interrupt.cpp  interrupt.h  spi.cpp  spi.h  time_keeping.cpp  time_keeping.h
src/utility/linux_kernel/: gpio.cpp  gpio.h  i2c.cpp  i2c.h  interrupt.cpp  interrupt.h  spi.cpp  spi.h  time_keeping.cpp  time_keeping.h
src/utility/mraa/: gpio.cpp  gpio.h  i2c.cpp  i2c.h  interrupt.cpp  interrupt.h  spi.cpp  spi.h  time_keeping.cpp  time_keeping.h
src/utility/pigpio/: gpio.cpp  gpio.h  i2c.cpp  i2c.h  interrupt.cpp  interrupt.h  spi.cpp  spi.h  time_keeping.cpp  time_keeping.h
src/utility/rp2/: CMakeLists.txt  gpio.cpp  gpio.h  i2c.cpp  i2c.h  interrupt.h  spi.cpp  spi.h  time_keeping.h
src/utility/template/: gpio.h  i2c.h  interrupt.h  spi.h  time_keeping.h
